--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,4 +8,5 @@ dependencies {
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
+  implementation project(':shared')
 }
